k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exploras-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: public
  rules:
  - host: exploras.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: exploras-backend-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exploras-frontend-service
            port:
              number: 80
